[package]
name = "hello_orbtk"
version = "0.1.0"
edition = "2018"
authors = ["Fumiya Sato <fumiya_sato_rop@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbtk = { git = "https://github.com/redox-os/orbtk.git", branch = "develop" }


